fix icons benefits width on mobile

--- a/style.css
+++ b/style.css
@@ -6473,7 +6473,7 @@ button {
 }
 .workout-item .workout-image {
   float: left;
-  width: 18%;
+  max-width: 18%;
   height: 200px;
   border-radius: 50%;
   margin: 12px 20px 0 0;
